--- a/style.css
+++ b/style.css
@@ -1,24 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Mohave:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&family=Odibee+Sans&family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,600&display=swap");
-footer {
-  font-family: "Poppins", sans-serif;
-  background-color: #fff;
-}
-footer h6 {
-  font-weight: 600;
-}
-
-header {
-  font-family: "Odibee Sans", cursive;
-}
-
-main {
-  font-family: "Poppins", sans-serif;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 100vh;
-}
-main h1 {
-  font-family: "Poppins", sans-serif;
-}/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Mohave:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&family=Odibee+Sans&family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,600&display=swap");/*# sourceMappingURL=style.css.map */
